--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon index.ts",
+    "build": "tsc -p tsconfig.json",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -16,5 +19,16 @@
   "bugs": {
     "url": "https://github.com/babaiyu/fastify_template_babaiyu/issues"
   },
-  "homepage": "https://github.com/babaiyu/fastify_template_babaiyu#readme"
+  "homepage": "https://github.com/babaiyu/fastify_template_babaiyu#readme",
+  "dependencies": {
+    "fastify": "^3.18.0",
+    "fastify-cors": "^6.0.1",
+    "fastify-healthcheck": "^3.1.0"
+  },
+  "devDependencies": {
+    "@types/node": "^15.12.5",
+    "nodemon": "^2.0.7",
+    "ts-node": "^10.0.0",
+    "typescript": "^4.3.4"
+  }
 }
