--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.ts",
     "build": "tsc -p tsconfig.json",
-    "start": "node index.js"
+    "clean-build": "rm -rf *.js && rm -rf src/*.js && rm -rf src/controller/*.js && rm -rf src/router/*.js",
+    "start": "node index.js",
+    "docker-build": "docker build . -t fastify_template_babaiyu",
+    "docker-start": "docker run -d -p 8500:8500 fastify_template_babaiyu"
   },
   "repository": {
     "type": "git",
