--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --coverage --detectOpenHandles",
     "dev": "nodemon index.ts",
     "build": "tsc -p tsconfig.json",
     "clean-build": "rm -rf *.js && rm -rf src/*.js && rm -rf src/controller/*.js && rm -rf src/router/*.js",
@@ -29,8 +29,12 @@
     "fastify-healthcheck": "^3.1.0"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.24",
     "@types/node": "^15.12.5",
+    "jest": "^27.0.6",
     "nodemon": "^2.0.7",
+    "pino-pretty": "^5.1.1",
+    "ts-jest": "^27.0.3",
     "ts-node": "^10.0.0",
     "typescript": "^4.3.4"
   }
