--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,6 +1,6 @@
 proxy_cache_path /var/cache/nginx levels=1:2 keys_zone=STATIC:10m inactive=7d use_temp_path=off;
 
-upstream fastify_upstream {
+upstream fastify_upstream { # Example for load balancing
   ip_hash;
   server fastify:8000;
   server fastify:8001;
@@ -14,33 +14,17 @@ server {
 
   server_tokens off;
 
-  gzip on;
-  gzip_proxied any;
-  gzip_comp_level 4;
-  gzip_types text/css application/javascript image/svg+xml;
-
   proxy_http_version 1.1;
   proxy_set_header Upgrade $http_upgrade;
   proxy_set_header Connection 'upgrade';
   proxy_set_header Host $host;
   proxy_cache_bypass $http_upgrade;
 
-  location /_next/static {
-    proxy_cache STATIC;
-    proxy_pass http://fastify_upstream;
-
-    # For testing cache - remove before deploying to production
-    # add_header X-Cache-Status $upstream_cache_status;
-  }
-
-  location /static {
+  location /public { # If u need static file like public directory
     proxy_cache STATIC;
     proxy_ignore_headers Cache-Control;
     proxy_cache_valid 60m;
     proxy_pass http://fastify_upstream;
-
-    # For testing cache - remove before deploying to production
-    # add_header X-Cache-Status $upstream_cache_status;
   }
 
   location / {
